@@ -84,7 +84,7 @@ if not exist "%APP_HOME%\app.jar" (
 @rem --------------------------------------------------------------------------
 @rem Default JVM options
 @rem --------------------------------------------------------------------------
-set DEFAULT_JVM_OPTS=-XX:+UseZGC -Xms256m -Xmx1g -XX:SoftMaxHeapSize=768m -XX:+UseStringDeduplication -XX:+AlwaysPreTouch -XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow
+set DEFAULT_JVM_OPTS=-XX:+UseZGC -Xms256m -Xmx1g -XX:SoftMaxHeapSize=768m -XX:+UseStringDeduplication -XX:+AlwaysPreTouch -XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow --enable-native-access=ALL-UNNAMED
 
 @rem --------------------------------------------------------------------------
 @rem Launch the feddi Gateway
